spotifyutils/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotifyutils-db
  namespace: tedy
  labels:
    app: spotifyutils-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: spotifyutils-db
  template:
    metadata:
      labels:
        app: spotifyutils-db
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: mysql
          resources:
            limits:
              cpu: "200m"
              memory: "300M"
            requests:
              cpu: "200m"
              memory: "300M"
          image: linuxserver/mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /config
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spotifyutils
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
