spotifyutils/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotifyutils
  namespace: tedy
  labels:
    app: spotifyutils
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: spotifyutils
  template:
    metadata:
      labels:
        app: spotifyutils
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: spotifyutils
          resources:
            limits:
              cpu: "2000m"
              memory: "300M"
            requests:
              cpu: "200m"
              memory: "300M"
          image: tedyst/spotifyutils:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spotifyutils
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
