spotifyutils/service-db.yml
kind: Service
apiVersion: v1
metadata:
  name: spotifyutils-db
  namespace: tedy
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: spotifyutils-db
