spotifyutils/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spotifyutils
spec:
  tls:
    - secretName: certificate-stoicatedy-ovh
  rules:
    - host: spotify.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: spotifyutils
              servicePort: 5000
